# Chordia

./: .gitignore  README.md  app.json  package-lock.json  update.log.txt
.expo/: devices.json
.github/workflows/: build_apps.yml  build_ipa.yml
app/: add_music.html  api.html  export.html  import.html  index.html
app/(tabs)/: index.tsx
app/css/: migration.css
app/css/add-music/: base.css  bulk.css
app/css/api/: api.css
app/js/: export.js  import.js  migration.js  script.js  settings.js
app/js/add-music/: bulk_core.js  bulk_ui.js
app/js/manage/: main.js  modal.js  modal_advanced.js  table.js
app/js/player/: main_view.js  (+3 more)
components/: FullScreenPlayer.tsx
desktop/: .gitignore  README.md  update.log.txt
desktop/app/: add_music.html  index.html  manage.html  migration.html  mini_player.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: cmd_add_music.rs  cmd_api.rs  cmd_export.rs  cmd_extensions.rs  cmd_history.rs  cmd_library.rs  cmd_window.rs  main.rs  server.rs  utils.rs
docs/: compatibility.between.desktop.mobile.html  desktop.html  handover.html  index.html  index.md  installer-return-codes.html  mobile.html
mobile/: .gitignore  LICENSE  README.md  app.json  package-lock.json  package.json  update.log.txt
mobile/android/: settings.gradle
mobile/components/: FullScreenPlayer.tsx
mobile/hooks/: useAudioPlayer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: @cmd_windows.rs  cmd_add_music.rs  cmd_export.rs  cmd_extensions.rs  cmd_library.rs  cmd_settings.rs  main.rs
(+30 files in other folders)
