[package]
name = "Chordia"
version = "3.2.0"
description = "Chordia - for a Comfortable Life with Music"
authors = ["BellRin"]
license = "(c) BellRin all rights reserved."
repository = "https://github.com/BellRin-squirrel/Chordia"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
rust-ini = "0.21.3"
rand = "0.9.4"
base64 = "0.22.1"
image = "0.25.6"
mp3-duration = "0.1.10"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
rfd = "0.17.2"
id3 = "1.16.4"
csv = "1.4.0"
tempfile = "3.27.0"
chrono = "0.4.44"
urlencoding = "2.1.3"
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
zip = { version = "2.2.0", features = ["aes-crypto"] }
walkdir = "2.5.0"
dirs = "5.0.1"
symphonia = "0.5.5"
